--- a/index.html
+++ b/index.html
@@ -40,22 +40,69 @@
             </div>
         </div>
         </section>
-        <!-- <form action="container">
-                <select class="" name="" id="">
-                <option selected value="">Mauritius</option>
-                <option value="">NewYork</option>
-                <option value="">London</option>
-                <option value="">Paris</option>
-                <option value="">Mumbai</option>
-            </select>
-        </form> -->
+        <div class="bookingForm">
+            <form action="" class="shadow">
+                    <select class="" name="" id="">
+                    <option selected value="">Mauritius</option>
+                    <option value="">NewYork</option>
+                    <option value="">London</option>
+                    <option value="">Paris</option>
+                    <option value="">Mumbai</option>
+                    </select>
+                    <select class="" name="" id="">
+                        <option selected value="">24 Sept 2016</option>
+                        <option value="">25 Sept 2016</option>
+                        <option value="">26 Sept 2016</option>
+                        <option value="">27 Sept 2016</option>
+                        <option value="">28 Sept 2016</option>
+                    </select>
+                    <select class="" name="" id="">
+                        <option selected value="">10 Oct 2016</option>
+                        <option value="">11 Oct 2016</option>
+                        <option value="">12 Oct 2016</option>
+                        <option value="">13 Oct 2016</option>
+                        <option value="">14 Oct 2016</option>
+                    </select>
+                    <select class="" name="" id="">
+                        <option selected value="">5 Bedrooms</option>
+                        <option value="">2 Bedrooms</option>
+                        <option value="">3 Bedrooms</option>
+                        <option value="">4 Bedrooms</option>
+                        <option value="">6 Bedrooms</option>
+                    </select>
+                    <span class="arrow text-center">
+                        <img src="./images/image.png" alt="">
+                    </span>
+            </form>
+        </div>
     <section class="container w-90 text-center pt-5 g-0">
-        <h2 class="pt-5">See latest vacation ideas</h2>
+        <h2 class="">See latest vacation ideas</h2>
         <img src="./images/title_separator.png"  alt="">
         <div class="container row py-3 g-0">
-            <img class="col-md-4 col-12  " src="./images/rectangle_23.jpg" alt="">
-            <img class="col-md-4 col-12 px-md-4 py-4 py-md-0" src="./images/rectangle_23_copy.jpg" alt="">
-            <img class="col-md-4 col-12 " src="./images/rectangle_23_copy_2.jpg" alt="">
+            <div class="hoverImage col-md-4 col-12 position-relative pe-md-3">
+                <img class="w-100 h-100" src="./images/rectangle_23.jpg" alt="">
+                <div class="hoverElement d-none p-2 bg-white position-absolute start-50 top-50 translate-middle">
+                    <div class="d-inline-block p-3" style="border: 1px solid black;">
+                        <img src="./images/beachfront_escapes.png" alt="">
+                    </div>
+                </div>
+            </div>
+            <div class="hoverImage col-md-4 col-12 px-md-3 py-4 py-md-0 position-relative">
+                <img class="w-100 h-100" src="./images/rectangle_23_copy.jpg" alt="">
+                <div class="hoverElement d-none p-2 bg-white position-absolute start-50 top-50 translate-middle">
+                    <div class="d-inline-block p-3" style="border: 1px solid black;">
+                        <img src="./images/group_holidays.png" alt="">
+                    </div>
+                </div>
+            </div>
+            <div class="hoverImage col-md-4 col-12 position-relative ps-md-3 ">
+                <img class="w-100 h-100" src="./images/rectangle_23_copy_2.jpg" alt="">
+                <div class="hoverElement d-none p-2 bg-white position-absolute start-50  top-50 translate-middle">
+                    <div class="d-inline-block p-3" style="border: 1px solid black;">
+                        <img src="./images/best_experience.png" alt="">
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
     <section class="container-fluid w-90  pt-5 " >
