--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
 <body>
     <nav class=" py-3 navbar  mx-auto align-item-center text-align-center w-90 navbar-expand-lg ">
         <img class="nav-brand w-25 d-lg-none" src="./images/private_holidays.png" alt="">
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <i class="fa-solid fa-bars"></i>
-          </button>     
-        <ul class="nav justify-content-between w-100 align-item-center navLinks collapse navbar-collapse" id="collapse navbarSupportedContent">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>    
+        <ul class="nav justify-content-between mr-auto mt-2 mt-lg-0 w-100 align-item-center collapse navbar-collapse" id="navbarNav">
             <li class="nav-item">
                 <a href="">HOME</a>
             </li>
             <li class="nav-item">
                 <a href="">EXPERIENCES</a>
             </li>
-            <li class="nav-brand">
+            <li class="nav-brand d-none d-lg-block">
                 <img src="./images/private_holidays.png" alt="">
             </li>
             <li class="nav-item">
